package de.digidrivelog.models;

import jakarta.persistence.*;
import lombok.Getter;
import lombok.Setter;
import lombok.NoArgsConstructor;
import lombok.AllArgsConstructor;
import lombok.EqualsAndHashCode;
import lombok.ToString;

import com.fasterxml.jackson.annotation.JsonIgnore;
import java.time.LocalDateTime;
import java.util.List;
import org.hibernate.annotations.CreationTimestamp;
import org.hibernate.annotations.UpdateTimestamp;

@Entity
@Table(name = "Car")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@EqualsAndHashCode(onlyExplicitlyIncluded = true)
@ToString(onlyExplicitlyIncluded = true)
public class Car {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    @Column(name = "carId", nullable = false)
    @EqualsAndHashCode.Include
    @ToString.Include
    private Long carId;

    @Column(name = "name", nullable = false, length = 50)
    private String name;

    @Column(name = "platenumber", nullable = false, length = 15)
    private String plateNumber;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "userId", nullable = true)
    private User owner;

    @Column(name = "data", nullable = true, length = 65535, columnDefinition = "TEXT")
    private String data;

    @OneToMany(mappedBy = "car", fetch = FetchType.LAZY)
    @JsonIgnore
    private List<Drive> drives;

    @OneToMany(mappedBy = "carId", fetch = FetchType.LAZY)
    @JsonIgnore
    private List<Cost> transactions;

    @CreationTimestamp
    @Column(name = "createdAt", nullable = false, updatable = false)
    private LocalDateTime createdAt;

    @UpdateTimestamp
    @Column(name = "updatedAt", nullable = false)
    private LocalDateTime updatedAt;
}
